Minor change in logo

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - course: B.Tech in Computer Science and Engineering
   institute: Banasthali Vidyapith
   dates: July 2018 - June 2022
-  logo: bu.jpeg
+  logo: bv.png
 
 - course: 100 Days Expert Coder
   institute: Prepbytes
